// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background: #004578;
  min-height: 40%;
  min-height: 60%;
  background: #eaeaea;
  padding: 0;
}

<div
  className="c0"
/>
`;

exports[`<AppHub-Home__Container /> should render correctly 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 15px;
  width: 420px;
}

@media (min-width: 576px) {
  .c0 {
    width: 566px;
  }
}

@media (min-width: 768px) {
  .c0 {
    width: 758px;
  }
}

@media (min-width: 992px) {
  .c0 {
    width: 982px;
  }
}

@media (min-width: 1200px) {
  .c0 {
    width: 1190px;
  }
}

<div
  className="c0"
/>
`;

exports[`<AppHub-Home__UpperSection /> should render correctly 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background: #004578;
  min-height: 40%;
}

<div
  className="c0"
/>
`;

exports[`<AppHub-Home__Wrapper /> should render correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

<div
  className="c0"
/>
`;

exports[`<AppHubHome /> should render correctly 1`] = `
<AppHub-Home__Wrapper>
  <AppHub-Home__UpperSection>
    <AppHub-Home__Container>
      <Search
        isMobile={false}
        onChange={[Function]}
      />
      <Apps
        onClick={[Function]}
        routes={
          Array [
            Object {
              "component": [Function],
              "exact": true,
              "key": "1",
              "meta": Object {
                "title": "test 1",
              },
              "path": "path1",
            },
            Object {
              "component": [Function],
              "exact": false,
              "key": "2",
              "meta": Object {
                "title": "test 3",
              },
              "path": "path2",
            },
            Object {
              "href": "testHref",
              "key": "3",
              "meta": Object {
                "title": "test 1",
              },
            },
          ]
        }
      />
    </AppHub-Home__Container>
  </AppHub-Home__UpperSection>
  <styled.div
    isMobile={false}
  >
    <Updates
      isMobile={false}
    />
  </styled.div>
</AppHub-Home__Wrapper>
`;

exports[`<styled.div /> should render correctly 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background: #004578;
  min-height: 40%;
  min-height: 60%;
  background: #eaeaea;
  padding: 15px;
}

<div
  className="c0"
/>
`;
